# node-addon-api-cmake

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  configure.js  index.js  package-lock.json  package.json  test.js
.changeset/: README.md  config.json  green-eagles-laugh.md
.github/workflows/: canary.yml  changesets-prerelease.yml  changesets-release.yml  publish.yml
cmake/: NodeAddon.cmake
scripts/: prepare-npm-packages.js  stage-prebuilds.js  sync-release-versions.js
src/: addon.cpp
