cmake_minimum_required(VERSION 3.15)
project(node_addon_api_addon VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include(NodeAddon)

node_addon_init()

set(NODE_ADDON_OUTPUT_DIR "${CMAKE_SOURCE_DIR}/build" CACHE PATH "Directory for built addon binaries")

add_library(${PROJECT_NAME} SHARED src/addon.cpp)

set_target_properties(${PROJECT_NAME} PROPERTIES
  PREFIX ""
  SUFFIX ".node"
  OUTPUT_NAME "addon"
  LIBRARY_OUTPUT_DIRECTORY "${NODE_ADDON_OUTPUT_DIR}"
  LIBRARY_OUTPUT_DIRECTORY_DEBUG "${NODE_ADDON_OUTPUT_DIR}"
  LIBRARY_OUTPUT_DIRECTORY_RELEASE "${NODE_ADDON_OUTPUT_DIR}"
  LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${NODE_ADDON_OUTPUT_DIR}"
  LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL "${NODE_ADDON_OUTPUT_DIR}"
  RUNTIME_OUTPUT_DIRECTORY "${NODE_ADDON_OUTPUT_DIR}"
  RUNTIME_OUTPUT_DIRECTORY_DEBUG "${NODE_ADDON_OUTPUT_DIR}"
  RUNTIME_OUTPUT_DIRECTORY_RELEASE "${NODE_ADDON_OUTPUT_DIR}"
  RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${NODE_ADDON_OUTPUT_DIR}"
  RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${NODE_ADDON_OUTPUT_DIR}"
)

target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
target_compile_definitions(${PROJECT_NAME} PRIVATE
  NAPI_VERSION=10
  NODE_ADDON_API_DISABLE_DEPRECATED
)

target_compile_warnings(${PROJECT_NAME})
target_enable_node_addon(${PROJECT_NAME})

install(TARGETS ${PROJECT_NAME}
  LIBRARY DESTINATION "${NODE_ADDON_OUTPUT_DIR}"
  RUNTIME DESTINATION "${NODE_ADDON_OUTPUT_DIR}"
)
